[workspace]
resolver = "2"
members = [
    "cli",
    "client", "dev-utils",
    "program",
    "pyth-solana-receiver-interface",
    "wormhole-core-bridge-solana-interface",
]

[profile.dev]
split-debuginfo = "unpacked"

[workspace.dependencies]
texture-common = { git = "ssh://git@git.tx-int.net/solana/common.git", rev = "ae9d28a" }
super-lendy = { git = "ssh://git@git.tx-int.net/solana/superlendy/superlendy.git", rev = "7895829", default-features = false, features = ["no-entrypoint"] }
pyth-solana-receiver-sdk = "0.5.0"
solana-sdk = "1.18"
solana-client = "1.18"
solana-program = "1.18"
spl-token = "4.0"
spl-token-2022 = "3.0"
spl-associated-token-account = "3.0"
serde = "1"
serde_json = "1.0"
serde_with = "3.0"
