[package]
name = "price-proxy-cli"
version = "0.1.6"
edition = "2021"
publish = false

[[bin]]
name = "price-proxy"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = "0.4"
derive_more = "0.99"
dirs-next = "2"
futures = "0.3"
future-utils = "0.12"
humantime = "2"
pyth-sdk-solana = "0.10"
rust_decimal = "1.33.1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
spl-token = { workspace = true, features = ["no-entrypoint"] }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
spl-associated-token-account = { workspace = true, features = ["no-entrypoint"] }
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
pyth-solana-receiver-sdk = "0.1.0"
hex = "0.4.3"

texture-common = { workspace = true }

price-proxy = { path = "../program", default-features = false, features = ["no-entrypoint", "with-serde"] }
price-proxy-client = { path = "../client" }

[dev-dependencies]
async-once-cell = "0.5"

dev-utils = { path = "../dev-utils" }
