[package]
name = "price-proxy-client"
version = "0.1.8"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
anchor-lang = "0.30.1"
base64 = "0.13.0"
chrono = "0.4.38"
derive_more = "0.99"
display_json = "0.2"
futures = "0.3"
future-utils = "0.12"
hex = "0.4.3"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
solana-client = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
pyth-solana-receiver-sdk = { workspace = true }
pythnet-sdk = "2.1.0"
wormhole-vaas-serde = "0.1.0"
serde_wormhole = "0.1.0"

pyth-solana-receiver-interface = { path = "../pyth-solana-receiver-interface" }
wormhole-core-bridge-solana-interface = { path = "../wormhole-core-bridge-solana-interface" }
price-proxy = { path = "../program", default-features = false, features = [
    "no-entrypoint",
    "with-serde",
] }
texture-common = { workspace = true, features = ["serde", "account-loaders"] }
super-lendy = { workspace = true }
