[package]
name = "dev-utils"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
assert_cmd = "2"
async-trait = "0.1"
assert_matches = "1"
backtrace-on-stack-overflow = "0.3"
lazy_static = "1"
predicates = "3"
pretty_assertions = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0"
solana-client = "1.16"
solana-program = "1.16"
solana-rpc = "1.16"
solana-test-validator = "1.16"
solana-sdk = "1.16"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
tokio = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

texture-common = { workspace = true }
