[package]
name = "price-proxy"
version = "0.1.12"
edition = "2021"
publish = false

[features]
default = ["with-processor"]
no-entrypoint = []
test-bpf = []

with-processor = ["super-lendy"]
with-serde = [
    "serde",
    "serde_with",
    "serde_json",
    "texture-common/serde",
    "chrono/serde",
    "display_json",
]

[dependencies]
borsh = "1.5"
bytemuck = "1.14"
derive_more = "0.99"
num_enum = "0.7"
solana-program = { workspace = true }
spl-token = { workspace = true }
static_assertions = "1.1"
thiserror = "1"
pyth-solana-receiver-sdk = { workspace = true }
switchboard-solana = "0.30.4"
anchor-lang = "0.30.1"
pythnet-sdk = "2.1.0"

texture-common = { workspace = true }
super-lendy = { workspace = true, optional = true }

chrono = { version = "0.4", optional = true }
display_json = { version = "0.2", optional = true }

serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }
strum = { version = "0.26.2", features = ["derive"] }

[dev-dependencies]
async-once-cell = "0.5"
futures = "0.3"
future-utils = "0.12"
rust_decimal = "1"

dev-utils = { path = "../dev-utils" }
price-proxy-client = { path = "../client" }

[lib]
crate-type = ["cdylib", "lib"]
