[package]
name = "pyth-solana-receiver-interface"
version = "1.0.0"
edition = "2021"
publish = false

[features]

[dependencies]
anchor-interface = { git = "ssh://git@git.tx-int.net/solana/anchor-interface.git", rev = "cb000ff" }
borsh = "0.9"
bytemuck = { version = "1.7.3", features = ["extern_crate_std", "min_const_generics"] }
num-derive = "0.3"
num-traits = "0.2"
rust_decimal = "1.33.1"
solana-program = { workspace = true }
thiserror = "1"
uint = "0.9"
pyth-solana-receiver-sdk = { workspace = true }

[build-dependencies]
anchor-interface-syn = { git = "ssh://git@git.tx-int.net/solana/anchor-interface.git", rev = "cb000ff" }
texture-common-syn = { git = "ssh://git@git.tx-int.net/solana/common.git", rev = "ae9d28a" }

[lib]
crate-type = ["cdylib", "lib"]
